doc: mdbook/src/

--- a/mdbook/src/ch03.md
+++ b/mdbook/src/ch03.md
@@ -7,3 +7,17 @@ chapter3_basics
 
 https://ziglang.org/documentation/master/#toc-Primitive-Types
 
+
+
+## src/ch03.zig
+
+``` zig
+{{#include ../../lispy-zig/ch03/src/ch03.zig}}
+```
+
+## build.zig
+
+``` zig
+{{#include ../../lispy-zig/ch03/build.zig}}
+```
+
