--- a/mdbook/src/ch06.md
+++ b/mdbook/src/ch06.md
@@ -6,3 +6,16 @@
 [mpc (Micro Parser Combinators)](https://github.com/orangeduck/mpc)
   - 6장 mpc_parse로 mpc_result_t 를 얻어 mpc_ast_print로 출력
     - mpc문법: 슬래시(/) 사이에 mpc정규 표현식을 넣어 작성
+
+## src/ch06.zig
+
+``` zig
+{{#include ../../lispy-zig/ch06/src/ch06.zig}}
+```
+
+
+## build.zig
+
+``` zig
+{{#include ../../lispy-zig/ch06/build.zig}}
+```
