--- a/mdbook/src/ch07.md
+++ b/mdbook/src/ch07.md
@@ -24,3 +24,15 @@ t->children
 2... :
 
 
+## src/ch07.zig
+
+``` zig
+{{#include ../../lispy-zig/ch07/src/ch07.zig}}
+```
+
+
+## build.zig
+
+``` zig
+{{#include ../../lispy-zig/ch07/build.zig}}
+```
