--- a/mdbook/src/ch08.md
+++ b/mdbook/src/ch08.md
@@ -15,3 +15,16 @@ typedef struct {
 
 LVAL_ // value
 LERR_ // error
+
+## src/ch08.zig
+
+``` zig
+{{#include ../../lispy-zig/ch08/src/ch08.zig}}
+```
+
+
+## build.zig
+
+``` zig
+{{#include ../../lispy-zig/ch08/build.zig}}
+```
