--- a/mdbook/src/ch09.md
+++ b/mdbook/src/ch09.md
@@ -36,3 +36,17 @@ lval_take는 lval_pop하면서 자신을 삭제
 › 이 realloc함수는 무슨 역할을 하나요?
 › 이 memmove함수는 무슨 역할을 하나요?
 › 와 어떻게 memmove다른가요 memcpy?
+
+
+## src/ch09.zig
+
+``` zig
+{{#include ../../lispy-zig/ch09/src/ch09.zig}}
+```
+
+
+## build.zig
+
+``` zig
+{{#include ../../lispy-zig/ch09/build.zig}}
+```
