--- a/mdbook/src/ch10.md
+++ b/mdbook/src/ch10.md
@@ -13,3 +13,17 @@ qexpr을 eval하면 그때서야 child에서 꺼내옴
         \\ symbol : "list" | "head" | "tail" | "eval" | "join"
         \\        | '+' | '-' | '*' | '/' ;
 ```
+
+
+## src/ch10.zig
+
+``` zig
+{{#include ../../lispy-zig/ch10/src/ch10.zig}}
+```
+
+
+## build.zig
+
+``` zig
+{{#include ../../lispy-zig/ch10/build.zig}}
+```
