--- a/mdbook/src/ch12.md
+++ b/mdbook/src/ch12.md
@@ -21,3 +21,16 @@ add-curried {5 6 7}
 add-uncurried 5 6 7
 
 
+
+## src/ch12.zig
+
+``` zig
+{{#include ../../lispy-zig/ch12/src/ch12.zig}}
+```
+
+
+## build.zig
+
+``` zig
+{{#include ../../lispy-zig/ch12/build.zig}}
+```
