--- a/mdbook/src/ch05.md
+++ b/mdbook/src/ch05.md
@@ -3,3 +3,17 @@
 - [origin](https://www.buildyourownlisp.com/chapter5_languages)
   - [doge_code.c](https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/doge_code.c)
   - [doge_grammar.c](https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/doge_grammar.c)
+
+
+## src/ch05.zig
+
+``` zig
+{{#include ../../lispy-zig/ch05/src/ch05.zig}}
+```
+
+
+## build.zig
+
+``` zig
+{{#include ../../lispy-zig/ch05/build.zig}}
+```
