--- a/mdbook/src/ch11.md
+++ b/mdbook/src/ch11.md
@@ -16,3 +16,16 @@
 const lbuiltin = fn(env: *lenv, val: *lval) *lval;
 
 Fun: *const lbuiltin,
+
+## src/ch11.zig
+
+``` zig
+{{#include ../../lispy-zig/ch11/src/ch11.zig}}
+```
+
+
+## build.zig
+
+``` zig
+{{#include ../../lispy-zig/ch11/build.zig}}
+```
