--- a/mdbook/src/ch14.md
+++ b/mdbook/src/ch14.md
@@ -2,3 +2,17 @@
 
 - https://www.buildyourownlisp.com/chapter14_strings
   - [strings.c](https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/strings.c)
+
+
+## src/ch14.zig
+
+``` zig
+{{#include ../../lispy-zig/ch14/src/ch14.zig}}
+```
+
+
+## build.zig
+
+``` zig
+{{#include ../../lispy-zig/ch14/build.zig}}
+```
