doc: mdbook/src

--- a/mdbook/src/ch05.md
+++ b/mdbook/src/ch05.md
@@ -4,6 +4,14 @@
   - [doge_code.c](https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/doge_code.c)
   - [doge_grammar.c](https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/doge_grammar.c)
 
+## 
+
+저자가 작성한 [mpc (Micro Parser Combinators)](https://github.com/orangeduck/mpc)의 사용 예.
+
+|                   |                       |
+| ----------------- | --------------------- |
+| Parser Combinator | 파서들 => 새로운 파서 |
+| Parser            | 텍스트 => 파싱된 결과 |
 
 ## src/ch05.zig
 
@@ -17,3 +25,13 @@
 ``` zig
 {{#include ../../lispy-zig/ch05/build.zig}}
 ```
+
+## Ref.
+
+- [wiki: Parser Combinator](https://en.wikipedia.org/wiki/Parser_combinator)
+- [wiki: Greenspun's tenth rule](https://en.wikipedia.org/wiki/Greenspun%27s_tenth_rule)
+- [youtube: Parser Combinators From Scratch](https://www.youtube.com/playlist?list=PLP29wDx6QmW5yfO1LAgO8kU3aQEj8SIrU)
+  - javascript로 작성
+- zig
+  - <https://devlog.hexops.com/2021/zig-parser-combinators-and-why-theyre-awesome/>
+  - <https://github.com/Hejsil/mecha>
