--- a/mdbook/src/ch07.md
+++ b/mdbook/src/ch07.md
@@ -3,10 +3,19 @@
 - [origin](https://www.buildyourownlisp.com/chapter7_evaluation)
   - [evaluation.c](https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/evaluation.c)
 
-  string to int
-  string compare
-  index of string
-  - Chapter 7 • Evaluation
+## 
+
+파싱된 mpc_ast_t 를 가지고 children을 방문하면서 계산을 함.
+
+``` sh
+Lispy Version 0.0.0.0.3
+Press Ctrl+c to Exit
+
+lispy> + 5 6
+11
+lispy> - (* 10 10) (+ 1 1 1)
+97
+```
 
 ``` c  
 typedef struct mpc_ast_t {
@@ -17,12 +26,6 @@ typedef struct mpc_ast_t {
   struct mpc_ast_t** children; // 자식 노드들의 배열
 } mpc_ast_t;
 ```
-
-t->children
-0 :
-1 : operator
-2... :
-
 
 ## src/ch07.zig
 
