--- a/mdbook/src/ch08.md
+++ b/mdbook/src/ch08.md
@@ -3,18 +3,9 @@
 - [origin](https://www.buildyourownlisp.com/chapter8_error_handling)
   - [error_handling.c](https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/error_handling.c)
 
-    - Lisp Value lval
-``` c
-/* Declare New lval Struct */
-typedef struct {
-  int type;
-  long num;
-  int err;
-} lval;
-```
+## 
 
-LVAL_ // value
-LERR_ // error
+Lval을 정의하여 숫자와 에러를 다루도록 합.
 
 ## src/ch08.zig
 
