--- a/mdbook/src/ch09.md
+++ b/mdbook/src/ch09.md
@@ -3,9 +3,9 @@
 - [origin](https://www.buildyourownlisp.com/chapter9_s_expressions)
   - [s_expressions.c](https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/s_expressions.c)
 
-  - Chapter 9 • S-Expressions - 난이도 상승
+## 
 
-어렵네
+lval_take는 lval_pop하면서 자신을 삭제
 
 ``` c
 typedef struct lval {
@@ -29,9 +29,8 @@ mpca_lang(MPCA_LANG_DEFAULT,
   ",
   Number, Symbol, Sexpr, Expr, Lispy);
 ```
-생성자 소멸자
-null terminated
-lval_take는 lval_pop하면서 자신을 삭제
+
+## c 함수 연습문제
 
 › 이 realloc함수는 무슨 역할을 하나요?
 › 이 memmove함수는 무슨 역할을 하나요?
