--- a/mdbook/src/ch11.md
+++ b/mdbook/src/ch11.md
@@ -1,21 +1,26 @@
 # ch11
 
-- https://www.buildyourownlisp.com/chapter11_variables
+- [origin](https://www.buildyourownlisp.com/chapter11_variables)
   - [variables.c](https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/variables.c)
 
-  - Chapter 11 • Variables
+##
 
-```
+``` txt
+// c
+  "
   symbol : /[a-zA-Z0-9_+\\-*\\/\\\\=<>!&]+/ ;         \
-```
+  "
 
-```
+// zig
+    \\
     \\ symbol : /[a-zA-Z0-9_+\-*\/\\=<>!&]+/ ;
+    \\
 ```
 
+``` zig
 const lbuiltin = fn(env: *lenv, val: *lval) *lval;
-
 Fun: *const lbuiltin,
+```
 
 ## src/ch11.zig
 
