--- a/mdbook/src/ch15.md
+++ b/mdbook/src/ch15.md
@@ -1,8 +1,11 @@
 # ch15
 
-- <https://www.buildyourownlisp.com/chapter15_standard_library>
+- [origin](https://www.buildyourownlisp.com/chapter15_standard_library)
   - [prelude.lspy](https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/prelude.lspy)
 
+##
+
+prelude.lspy를 불러와봄
 
 ## src/ch15.zig
 
