--- a/mdbook/src/ch02.md
+++ b/mdbook/src/ch02.md
@@ -17,6 +17,7 @@
   - Linux 혹은 macOs
     - [vadimcn.vscode-lldb](https://marketplace.visualstudio.com/items?itemName=vadimcn.vscode-lldb)
       - <https://github.com/vadimcn/codelldb/wiki/Windows>
+  - [ms-vscode-remote.vscode-remote-extensionpack](https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.vscode-remote-extensionpack)
 
 ### .vscode/
 
