--- a/mdbook/src/ch04.md
+++ b/mdbook/src/ch04.md
@@ -3,18 +3,13 @@
 - [origin](https://www.buildyourownlisp.com/chapter4_interactive_prompt)
   - [prompt.c](https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/prompt.c)
 
-  - 4장 [mpc (Micro Parser Combinators)](https://github.com/orangeduck/mpc)
-    - [wiki: Parser Combinator](https://en.wikipedia.org/wiki/Parser_combinator)
-    - [wiki: Greenspun's tenth rule](https://en.wikipedia.org/wiki/Greenspun%27s_tenth_rule)
-    - Parser: 텍스트 => 파싱된 결과
-    - Parser Combinator: 파서들 => 새로운 파서
-    - [youtube: Parser Combinators From Scratch](https://www.youtube.com/playlist?list=PLP29wDx6QmW5yfO1LAgO8kU3aQEj8SIrU)
-      - javascript로 작성
-    - zig
-      - https://devlog.hexops.com/2021/zig-parser-combinators-and-why-theyre-awesome/
-      - https://github.com/Hejsil/mecha
+##
+
+- libedit을 사용하여 입력 히스토리를 저장.
+- while루프를 돌면서 사용자와 인터렉티브 환경
 
 
+## Zig 타입
 
 | Zig 타입       | C와의 대응                          | 의미                                 |
 | -------------- | ----------------------------------- | ------------------------------------ |
@@ -26,8 +21,6 @@
 | `[*c]u8`       | `uint8_t*` 또는 `char*`             | C 호환 raw pointer                   |
 | `*const [N]u8` | `const uint8_t[N]*`                 | 길이 고정된 배열의 포인터            |
 
-
-  - 3장 <editline/readline.h>를 사용한 [prompt.c](https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/prompt.c)
 
 ## libedit
 
@@ -47,12 +40,10 @@ sudo apt install libedit-dev
 
 - 내장된 readline.h
   - /usr/local/include, /usr/local/lib로
-- brew install libedit
+- 혹은 brew install libedit
   - <https://formulae.brew.sh/formula/libedit>
   - <https://thrysoee.dk/editline/>
     - "editline/readline.h"
-
-[*c]u8 []u8을 가리키는 *c c의 포인터
 
 ## src/ch04.zig
 
