--- a/mdbook/src/ch12.md
+++ b/mdbook/src/ch12.md
@@ -1,11 +1,24 @@
 # ch12
 
-
-- https://www.buildyourownlisp.com/chapter12_functions
+- [origin](https://www.buildyourownlisp.com/chapter12_functions)
   - [functions.c](https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/functions.c)
 
-  - Chapter 12 • Functions
+## 
+def {add-together} (\ {x y} {+ x y})
+add-together 10 20
 
+lispy> def {add-mul} (\ {x y} {+ x (* x y)})
+()
+lispy> add-mul 10 20
+210
+lispy> add-mul 10
+(\ {y} {+ x (* x y)})
+lispy> def {add-mul-ten} (add-mul 10)
+()
+lispy> add-mul-ten 50
+510
+lispy>
+``` txt
 def {fun} (\ {args body} {def (head args) (\ (tail args) body)})
 fun {unpack f xs} {eval (join (list f) xs)}
 fun {pack f & xs} {f xs}
@@ -19,7 +32,7 @@ def {add-uncurried} +
 def {add-curried} (curry +)
 add-curried {5 6 7}
 add-uncurried 5 6 7
-
+```
 
 
 ## src/ch12.zig
