--- a/mdbook/src/ch14.md
+++ b/mdbook/src/ch14.md
@@ -1,8 +1,9 @@
 # ch14
 
-- https://www.buildyourownlisp.com/chapter14_strings
+- [origin](https://www.buildyourownlisp.com/chapter14_strings)
   - [strings.c](https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/strings.c)
 
+##
 
 ## src/ch14.zig
 
