doc: mdbook/src/

--- a/mdbook/src/ch01.md
+++ b/mdbook/src/ch01.md
@@ -1,3 +1,12 @@
 # ch01
 
 - [origin](https://www.buildyourownlisp.com/chapter1_introduction)
+
+## 0x00
+
+- 책이 누구를 위한 것인지, 왜 c로 lisp를 만드는지.
+
+## 나는?
+
+- c를 알고, lisp를 알고있다.
+- lisp를 만들어봐야지 하는 생각만 하다 zig를 한번 테스트겸 lisp를 작성.
