--- a/mdbook/src/ch02.md
+++ b/mdbook/src/ch02.md
@@ -3,21 +3,27 @@
 - [origin](https://www.buildyourownlisp.com/chapter2_installation)
   - [hello_world.c](https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/hello_world.c)
 
+## 0x00
+
+- 텍스트 에디터 선택 및 C로 HelloWorld띄우기
+
+## VS Code
+
+### 플러그인
+
+- [ziglang.vscode-zig](https://marketplace.visualstudio.com/items?itemName=ziglang.vscode-zig)
+  - <https://zigtools.org/zls/editors/vscode/>
+- Window라면
+  - [ms-vscode.cpptools](https://marketplace.visualstudio.com/items?itemName=ms-vscode.cpptools)
+- Linux 혹은 macOs
+  - [vadimcn.vscode-lldb](https://marketplace.visualstudio.com/items?itemName=vadimcn.vscode-lldb)
+    - <https://github.com/vadimcn/codelldb/wiki/Windows>
+- [ms-vscode-remote.vscode-remote-extensionpack](https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.vscode-remote-extensionpack)
+
 ## Zig 설치
 
 - [Window - winget](https://github.com/ziglang/zig/wiki/Install-Zig-from-a-Package-Manager#windows-winget)
-
-## vscode
-
-- 플러그인
-  - [ziglang.vscode-zig](https://marketplace.visualstudio.com/items?itemName=ziglang.vscode-zig)
-    - <https://zigtools.org/zls/editors/vscode/>
-  - Window라면
-    - [ms-vscode.cpptools](https://marketplace.visualstudio.com/items?itemName=ms-vscode.cpptools)
-  - Linux 혹은 macOs
-    - [vadimcn.vscode-lldb](https://marketplace.visualstudio.com/items?itemName=vadimcn.vscode-lldb)
-      - <https://github.com/vadimcn/codelldb/wiki/Windows>
-  - [ms-vscode-remote.vscode-remote-extensionpack](https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.vscode-remote-extensionpack)
+- [Hello World](https://zig.guide/getting-started/hello-world)
 
 ### .vscode/
 
@@ -37,21 +43,16 @@
 {{#include ../../.vscode/tasks.json}}
 ```
 
-## xxx
-
-zig
-https://pedropark99.github.io/zig-book/Chapters/01-zig-weird.html
-https://ziglang.org/learn/getting-started/
-
-build.zig
-build.zig.zon
-
-zon - Zig Object Notation
-json - JavaScript Object Notation
-
-"Hello World!"
-컴파일 방법 build.zig
+## src/ch02.zig
 
 ``` zig
 {{#include ../../lispy-zig/ch02/src/ch02.zig}}
 ```
+
+
+## build.zig
+
+``` zig
+{{#include ../../lispy-zig/ch03/build.zig}}
+```
+
