--- a/mdbook/src/ch03.md
+++ b/mdbook/src/ch03.md
@@ -2,12 +2,19 @@
 
 - [origin](https://www.buildyourownlisp.com/chapter3_basics)
 
-chapter3_basics
-기본 타입들
+## 0x00
 
-https://ziglang.org/documentation/master/#toc-Primitive-Types
+- 기본 타입들
+- 함수 정의
+- 구조체 정의
+- 포인터
+- 문자열
+- 조건문
+- 루프
 
+## zig?
 
+- <https://ziglang.org/documentation/master/#toc-Primitive-Types>
 
 ## src/ch03.zig
 
