--- a/mdbook/src/ch09.md
+++ b/mdbook/src/ch09.md
@@ -3,7 +3,7 @@
 - [origin](https://www.buildyourownlisp.com/chapter9_s_expressions)
   - [s_expressions.c](https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/s_expressions.c)
 
-## 
+## 0x00
 
 lval_take는 lval_pop하면서 자신을 삭제
 
@@ -30,7 +30,7 @@ mpca_lang(MPCA_LANG_DEFAULT,
   Number, Symbol, Sexpr, Expr, Lispy);
 ```
 
-## c 함수 연습문제
+## TODO c 함수 연습문제
 
 › 이 realloc함수는 무슨 역할을 하나요?
 › 이 memmove함수는 무슨 역할을 하나요?
