--- a/mdbook/src/ch11.md
+++ b/mdbook/src/ch11.md
@@ -3,7 +3,7 @@
 - [origin](https://www.buildyourownlisp.com/chapter11_variables)
   - [variables.c](https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/variables.c)
 
-##
+## 0x00
 
 ``` txt
 // c
@@ -19,7 +19,8 @@
 
 ``` zig
 const lbuiltin = fn(env: *lenv, val: *lval) *lval;
-Fun: *const lbuiltin,
+
+BuiltinOrNull: ?*const lbuiltin = null,
 ```
 
 ## src/ch11.zig
