--- a/mdbook/src/ch12.md
+++ b/mdbook/src/ch12.md
@@ -3,7 +3,13 @@
 - [origin](https://www.buildyourownlisp.com/chapter12_functions)
   - [functions.c](https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/functions.c)
 
-## 
+## 0x00
+
+- 함수 정의
+
+## repl
+
+``` sh
 def {add-together} (\ {x y} {+ x y})
 add-together 10 20
 
@@ -18,6 +24,8 @@ lispy> def {add-mul-ten} (add-mul 10)
 lispy> add-mul-ten 50
 510
 lispy>
+```
+
 ``` txt
 def {fun} (\ {args body} {def (head args) (\ (tail args) body)})
 fun {unpack f xs} {eval (join (list f) xs)}
