--- a/mdbook/src/ch14.md
+++ b/mdbook/src/ch14.md
@@ -3,7 +3,9 @@
 - [origin](https://www.buildyourownlisp.com/chapter14_strings)
   - [strings.c](https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/strings.c)
 
-##
+## 0x00
+
+- 문자열 다루기
 
 ## src/ch14.zig
 
