--- a/mdbook/src/ch15.md
+++ b/mdbook/src/ch15.md
@@ -3,9 +3,11 @@
 - [origin](https://www.buildyourownlisp.com/chapter15_standard_library)
   - [prelude.lspy](https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/prelude.lspy)
 
-##
+## 0x00
 
-prelude.lspy를 불러와봄
+- prelude.lspy를 불러와봄
+  - prelude: 서곡
+  - 기본 제공되는 최소한의 도구 모음
 
 ## src/ch15.zig
 
