--- a/mdbook/src/ch16.md
+++ b/mdbook/src/ch16.md
@@ -1,20 +1,7 @@
 # ch16
 
+- [origin](https://www.buildyourownlisp.com/chapter16_bonus_projects)
 
-- https://www.buildyourownlisp.com/chapter16_bonus_projects
-- https://www.buildyourownlisp.com/appendix_a_hand_rolled_parser
-  - [hand_rolled_parser.c](https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/hand_rolled_parser.c)
+## 0x00
 
-
-## src/ch16.zig
-
-``` zig
-{{#include ../../lispy-zig/ch16/src/ch16.zig}}
-```
-
-
-## build.zig
-
-``` zig
-{{#include ../../lispy-zig/ch16/build.zig}}
-```
+- lispy를 더 확장시키기 위한 아이디어들 소개
