--- a/mdbook/src/ch13.md
+++ b/mdbook/src/ch13.md
@@ -3,7 +3,10 @@
 - [origin](https://www.buildyourownlisp.com/chapter13_conditionals)
   - [conditionals.c](https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/conditionals.c)
 
-##
+## 0x00
+
+- 조건문(if)
+- 비교문
 
 ## src/ch13.zig
 
