doc: mdbook/src/

--- a/mdbook/src/ch02.md
+++ b/mdbook/src/ch02.md
@@ -7,41 +7,9 @@
 
 - 텍스트 에디터 선택 및 C로 HelloWorld띄우기
 
-## VS Code
+## 에디터
 
-### 플러그인
-
-- [ziglang.vscode-zig](https://marketplace.visualstudio.com/items?itemName=ziglang.vscode-zig)
-  - <https://zigtools.org/zls/editors/vscode/>
-- Window라면
-  - [ms-vscode.cpptools](https://marketplace.visualstudio.com/items?itemName=ms-vscode.cpptools)
-- Linux 혹은 macOs
-  - [vadimcn.vscode-lldb](https://marketplace.visualstudio.com/items?itemName=vadimcn.vscode-lldb)
-    - <https://github.com/vadimcn/codelldb/wiki/Windows>
-- [ms-vscode-remote.vscode-remote-extensionpack](https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.vscode-remote-extensionpack)
-
-## Zig 설치
-
-- [Window - winget](https://github.com/ziglang/zig/wiki/Install-Zig-from-a-Package-Manager#windows-winget)
-- [Hello World](https://zig.guide/getting-started/hello-world)
-
-### .vscode/
-
-``` json
-{{#include ../../.vscode/extensions.json}}
-```
-
-``` json
-{{#include ../../.vscode/launch.json}}
-```
-
-``` json
-{{#include ../../.vscode/settings.json}}
-```
-
-``` json
-{{#include ../../.vscode/tasks.json}}
-```
+- [vscode](./vscode) 참고
 
 ## src/ch02.zig
 
