--- a/mdbook/src/ch09.md
+++ b/mdbook/src/ch09.md
@@ -32,10 +32,21 @@ mpca_lang(MPCA_LANG_DEFAULT,
 
 ## TODO c 함수 연습문제
 
-› 이 realloc함수는 무슨 역할을 하나요?
-› 이 memmove함수는 무슨 역할을 하나요?
-› 와 어떻게 memmove다른가요 memcpy?
+- alloc & realloc
 
+``` zig
+var buffer = try allocator.alloc(u8, 4);
+buffer = try allocator.realloc(buffer, 4, 8);
+```
+
+- memcpy & memmove
+  - memcpy목적지가 소스와 전혀 겹칠 수 없습니다.
+  - memmove를 사용하면 가능합니다
+
+``` zig
+std.mem.copy(u8, dst, src);  // memcpy
+std.mem.move(u8, dst, src);  // memmove
+```
 
 ## src/ch09.zig
 
