doc: mdbook/src/

--- a/mdbook/src/ch02.md
+++ b/mdbook/src/ch02.md
@@ -7,6 +7,27 @@
 
 - 텍스트 에디터 선택 및 C로 HelloWorld띄우기
 
+<table><tr><th>C</th><th>Zig</th></tr><tr><td>
+
+```c
+#include <stdio.h>
+
+int main(int argc, char** argv) {
+  puts("Hello, world!");
+  return 0;
+}
+```
+</td><td>
+
+```zig
+const std = @import("std");
+pub fn main() void {
+    std.debug.print("Hello, Zig!\n", .{});
+}
+```
+
+</td></tr></table>
+
 ## 에디터
 
 - [vscode](./vscode) 참고
