--- a/mdbook/src/ch10.md
+++ b/mdbook/src/ch10.md
@@ -9,9 +9,31 @@
   - `( )`로 감싸는게 아닌 `{ }` 로 감쌈
 - qexpr을 eval하면 그때서야 child 에서 꺼내옴
 
-``` txt
-        \\ symbol : "list" | "head" | "tail" | "eval" | "join"
-        \\        | '+' | '-' | '*' | '/' ;
+
+``` c
+    // c
+    "                                                    \
+      number : /-?[0-9]+/ ;                              \
+      symbol : \"list\" | \"head\" | \"tail\" | \"eval\" \
+             | \"join\" | '+' | '-' | '*' | '/' ;        \
+      sexpr  : '(' <expr>* ')' ;                         \
+      qexpr  : '{' <expr>* '}' ;                         \
+      expr   : <number> | <symbol> | <sexpr> | <qexpr> ; \
+      lispy  : /^/ <expr>* /$/ ;                         \
+    ",
+```
+
+``` zig
+//    zig
+    const lang =
+        \\ number : /-?[0-9]+/ ;
+        \\ symbol : "list" | "head" | "tail"
+        \\        | "join" | "eval" | '+' | '-' | '*' | '/' ;
+        \\ sexpr  : '(' <expr>* ')' ;
+        \\ qexpr  : '{' <expr>* '}' ;
+        \\ expr   : <number> | <symbol> | <sexpr> | <qexpr> ;
+        \\ lispy  : /^/ <expr>* /$/ ;
+    ;
 ```
 
 ## src/ch10.zig
